--- a/src/app/room-details/room-details.component.html
+++ b/src/app/room-details/room-details.component.html
@@ -1,1 +1,40 @@
-<p>room-details works!</p>
+<h2>Detalhes da Sala</h2>
+
+<hr/>
+
+<div *ngIf="room">
+  <div>
+    <label>
+      <b>Nome</b>
+    </label>
+    {{room.name}}
+  </div>
+
+  <div>
+    <label>
+      <b>Data</b>
+    </label>
+    {{room.date}}
+  </div>
+
+  <div>
+    <label>
+      <b>Horário de início</b>
+    </label>
+    {{room.startHour}}
+  </div>
+
+  <div>
+    <label>
+      <b>Horário término</b>
+    </label>
+    {{room.endHour}}
+  </div>
+</div>
+
+<br>
+<br>
+
+<button (click)="list()" class="btn btn-primary">Voltar para Lista de Salas</button>
+
+<br>
