--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a router-link="rooms" class="nav-link" routerLinkActive="active"> Room List</a>
+      <a href="/rooms" class="nav-link" > Listagem de Salas</a>
     </li>
 
     <li class="nav-item">
-      <a router-link="add" class="nav-link" routerLinkActive="active">Add Room</a>
+      <a href="/add" class="nav-link">Adicionar Sala</a>
     </li>
   </ul>
 </nav>
