--- a/src/app/update-room/update-room.component.html
+++ b/src/app/update-room/update-room.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="form-group">
-      <label for="date">Data</datel>
+      <label for="date">Data</label>
       <input type="text" class="form-control" id="date" required [(ngModel)]="room.date" name="date">
     </div>
 
